cabal-version: 2.4

name:           pushy-client
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Holmusk/pushy-client#readme>
synopsis:       HTTP client library for Pushy API
homepage:       https://github.com/Holmusk/pushy-client#readme
bug-reports:    https://github.com/Holmusk/pushy-client/issues
author:         Holmusk
maintainer:     Holmusk <tech@holmusk.com>
copyright:      2020 Holmusk
license:        BSD-3-Clause
license-file:   LICENSE
category:       Web
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
tested-with:    GHC == 8.6.5

source-repository head
  type: git
  location: https://github.com/Holmusk/pushy-client

common common-options
  build-depends:   base >=4.7 && <5
  default-language: Haskell2010
  ghc-options:  -Wall
                -Wincomplete-uni-patterns
                -Wincomplete-record-updates
                -Wcompat
                -Widentities
                -Wredundant-constraints
                -fhide-source-paths
                -Wpartial-fields
                -Wno-unrecognised-pragmas
library
  import: common-options
  exposed-modules: PushyClient
                 , MockRequest
                 , Types.PushyRequest
                 , Types.PushyResponse
  hs-source-dirs:  src
  build-depends:   aeson
                 , aeson-casing
                 , bytestring ^>= 0.10
                 , containers
                 , data-default-class
                 , exceptions ^>= 0.10.4
                 , http-client
                 , http-conduit
                 , http-types
                 , lens
                 , scientific
                 , text ^>= 1.2
                 , time
  

test-suite pushy-client-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:  Paths_pushy_client
  autogen-modules: Paths_pushy_client
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:  pushy-client
